<resources>
    <string name="app_name">tt</string>
    <string name="menu_home">Home</string>
    <string name="menu_done">Done Affair</string>
    <string name="menu_outDated">Outdated Affair</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButtonText">LOGIN</string>
    <string name="registerSwitcherText">Register</string>
    <string name="backText">Back</string>
    <string name="sign_inSwitcher">Sign in</string>
    <string name="usernameHint">Username</string>
    <string name="registerButtonText">Register</string>
    <string name="copyrightText" translatable="false">© 2020 Zhao Jiaming</string>
    <string name="settings_title">Settings</string>
    <string name="addAffairHint">What\'s the matter?</string>
    <string name="deleteAffairReminder">Deserted affair:</string>
    <string name="editAffairTitleHint">Title</string>
    <string name="editAffairContentHint">Content</string>
    <string name="profileEmailReminder">Email:</string>
    <string name="profileUsernameReminder">Username:</string>
    <string name="profilePerformance">Performance</string>
    <string name="profileSign">Sign Today</string>
    <string name="signPart1">"Today is "</string>
    <string name="signPart2">Sign now!</string>
    <string name="signPart3">"It's been "</string>
    <string name="signPart4">day(s) since last sign.</string>
    <string name="signPart5">"Already sign continuously for "</string>
    <string name="signPart6">" day(s)."</string>
    <string name="renderSettingsTitle">Real-time Rendering</string>
    <string name="renderSettingsContent">As you edit the content of an affair, render the text in the same time.</string>
    <string name="recycleSettingsTitle">Auto-recycle Done Affairs</string>
    <string name="recycleSettingsContent">When you mark an affair as done, it will be removed from HOME.</string>
    <string name="visitGithub">Visit GitHub Repository</string>
    <string name="customerService">Any problem? Chat with the developer!</string>
    <string name="sign_registerButton">Sign in / Register</string>
    <string name="affairEmpty">Let\'s write something!</string>
    <string name="doneAffairEmpty">No done affair so far~</string>
    <string name="outdatedAffairEmpty">No outdated affair so far!</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="low_affairNum">Record more affair!</string>
    <string name="low_signTimes">Sign the day helps a lot!</string>
    <string name="low_doneRate">Lazy pig...</string>
    <string name="low_outdatedRate">You are self disciplined, well-done!</string>
    <string name="low_socialTimes">Share this app, please</string>
    <string name="affairNum">Affair Amount</string>
    <string name="signTimes">Sign Times</string>
    <string name="doneRate">Done Rate</string>
    <string name="outdatedRate">Outdated Rate</string>
    <string name="socialTimes">Social Star</string>
    <string name="logout">Log out</string>
    <string name="newAffair">New Affair</string>
    <string name="delAffair">Delete Affair</string>
    <string name="setDate">Set Date</string>
    <string name="notLogin">You have not login!</string>
    <string name="emptyEmail">Email can not be empty!</string>
    <string name="emptyPassword">Password can not be empty!</string>
    <string name="accountNotExist">Account not exist!</string>
    <string name="illegalEmail">Email address is illegal!</string>
    <string name="loginSuccess">Login Successfully!</string>
    <string name="wrongPassword">Wrong password!</string>
    <string name="emptyUsername">Username can not be empty!</string>
    <string name="registerSuccess">Register Successfully!</string>
    <string name="emailExist">Email address already exists!</string>
</resources>