<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_done"
        android:name="com.example.tt.ui.done.DoneFragment"
        android:label="@string/menu_done"
        tools:layout="@layout/fragment_done" />

    <fragment
        android:id="@+id/nav_outdated"
        android:name="com.example.tt.ui.outdated.OutdatedFragment"
        android:label="@string/menu_outDated"
        tools:layout="@layout/fragment_outdated" />
</navigation>