<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="@dimen/inputAlpha"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="@dimen/inputAlpha"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button_shape"
        android:backgroundTint="@color/colorPrimary"
        android:fadingEdge="horizontal"
        android:text="@string/loginButtonText"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/switchToRegister"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:clickable="true"
        android:gravity="center"
        android:text="@string/registerSwitcherText"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        android:focusable="true" />

    <TextView
        android:id="@+id/finishLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:clickable="true"
        android:gravity="center"
        android:text="@string/backText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        android:focusable="true" />

    <TextView
        android:id="@+id/finishRegister"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/backText"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <TextView
        android:id="@+id/switchToLogin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:clickable="true"
        android:gravity="center"
        android:text="@string/sign_inSwitcher"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        android:focusable="true" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="@dimen/inputAlpha"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usernameHint"
        android:inputType="textPersonName"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="@dimen/inputAlpha"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/register_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="@dimen/inputAlpha"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColorHint="@color/hintColor"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button_shape"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/registerButtonText"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyrightText"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="129dp"
        android:layout_height="144dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:srcCompat="@drawable/logo_text" />
</androidx.constraintlayout.widget.ConstraintLayout>